Update build.gradle to include path to logback.xml